--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -219,8 +219,6 @@
           </paper-card>
 
           <paper-card heading="Wichtige Meldungen der Fakultät" class="cyan faknews">
-                
-               <!--iron-image heading="Favorite trips" src="./warning.jpg" alt="Trip"/-->
             <div class="card-content">
             <div class="titleNews"></div>
             <div class="dateNews">07.11.2016</div>
@@ -230,9 +228,8 @@
           </paper-card>
 
 
-            <paper-card image="./bus.jpg" alt="Donuts" class="departures">
+            <paper-card image="./icons/bus214.jpg" alt="Donuts" class="departures">
             <div class="card-content">
-              <paper-card-heading>In der naechsten Stunde fahren folgende Busse </paper-card-heading>
               <div class="card-actions">
                     <paper-icon-item><iron-icon icon="icons:swap-vertical-circle" item-icon></iron-icon>Bus 214</paper-icon-item>
                    <div class="horizontal justified"> 
@@ -287,16 +284,15 @@
                         </paper-item-body>
                       </paper-icon-item>
                     </div>
-              <!--paper-button class="cafe-reserve">Reserve</paper-button-->
             </div>
             </div>
           </paper-card>
 
           
-          <paper-card heading="Yuna tickets on sale 6/24" class="lime">
+          <paper-card heading="Laufende Veranstaltungen" class="lime">
           </paper-card>
 
-          <paper-card heading="Mensateria" image="./essen.jpg" alt="Donuts" class="amber meals">
+          <paper-card heading="Mensateria" image="./icons/mensateria.jpg" alt="Donuts" class="amber meals">
 
                <div class="card-content">
                   <div class="cafe-header card-actions">
@@ -340,7 +336,7 @@
             </div>
           </paper-card-->
 
-          <paper-card heading="Mensa am Hubland" image="./essen.jpg" alt="Donuts" class="dark mealshub">
+          <paper-card heading="Mensa am Hubland" image="./icons/mensahubland.jpg" alt="Donuts" class="dark mealshub">
 
                <div class="card-content">
                  </div>
